--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "sync-promise": "^1.1.0"
   }
